// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Assets /> should render empty properly 1`] = `
.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-7 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  text-align: center;
}

.emotion-0 {
  padding-top: 16px;
  font-size: 32px;
  line-height: 43px;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  color: #b3b3b3;
}

.emotion-2 {
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  background-color: #73b61c;
}

.emotion-3:hover {
  background-color: #96c955;
}

.emotion-3[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  width: 24px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
  >
    <div
      className="emotion-7"
    >
      <svg
        color="#808080"
        data-file-name="noAssets.svg"
        width={168}
      />
      <h2
        className="emotion-0"
      >
        There are no assets in the system yet. 
      </h2>
      <h3
        className="emotion-1"
      >
        Assets can be added via the data source and the progress monitored in the job queue.
      </h3>
      <div
        className="emotion-2"
      />
      <div
        className="emotion-6"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create a Data Source
        </a>
        <div
          className="emotion-4"
        />
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View Job Queue
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render empty with filter properly 1`] = `
.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-3 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  text-align: center;
}

.emotion-0 {
  padding-top: 16px;
  font-size: 32px;
  line-height: 43px;
}

.emotion-1 {
  height: 24px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #73b61c;
}

.emotion-2:hover {
  background-color: #96c955;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <svg
        color="#808080"
        data-file-name="noAssets.svg"
        width={168}
      />
      <h2
        className="emotion-0"
      >
        All assets have been filtered out.
      </h2>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render empty with no filters properly 1`] = `
.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-7 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  text-align: center;
}

.emotion-0 {
  padding-top: 16px;
  font-size: 32px;
  line-height: 43px;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  color: #b3b3b3;
}

.emotion-2 {
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  background-color: #73b61c;
}

.emotion-3:hover {
  background-color: #96c955;
}

.emotion-3[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  width: 24px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
  >
    <div
      className="emotion-7"
    >
      <svg
        color="#808080"
        data-file-name="noAssets.svg"
        width={168}
      />
      <h2
        className="emotion-0"
      >
        There are no assets in the system yet. 
      </h2>
      <h3
        className="emotion-1"
      >
        Assets can be added via the data source and the progress monitored in the job queue.
      </h3>
      <div
        className="emotion-2"
      />
      <div
        className="emotion-6"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create a Data Source
        </a>
        <div
          className="emotion-4"
        />
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View Job Queue
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render properly 1`] = `
.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-0 {
  padding: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Roboto Condensed;
  font-size: 15px;
  line-height: 19px;
  background-color: #252525;
  color: #808080;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  margin-bottom: 1px;
}

.emotion-3 {
  width: 100%;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px 16px;
  font-weight: 400;
  border-radius: 0;
  position: absolute;
  top: 16px;
  left: 16px;
  padding: 8px;
  color: #808080;
  background-color: #2e2e2e;
  border-radius: 32px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover {
  background-color: #4a4a4a;
}

.emotion-1:hover {
  color: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 32px;
}

.emotion-2 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-2 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-6 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  z-index: 10;
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  opacity: 1;
  padding: 8px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover {
  color: #73b61c;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  opacity: 1;
  padding: 8px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #73b61c;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  >
    574
     Assets
  </div>
  <div
    className="emotion-7"
  >
    <ReactAriaModal
      dialogStyle={
        Object {
          "width": "100%",
        }
      }
      focusDialog={true}
      getApplicationNode={[Function]}
      mounted={false}
      onExit={[Function]}
      titleId="Asset"
      underlayColor="rgba(0, 0, 0, 0.9)"
      verticallyCenter={true}
    >
      <div
        className="emotion-3"
      >
        <button
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            width={20}
          />
        </button>
        <div
          className="emotion-2"
        >
          <AssetAsset
            assetId="pNwnXjVntgbDQgPZhkXqVT-2URMqvJNL"
            projectId="76917058-b147-4556-987a-0a0f11e46d9b"
          />
        </div>
      </div>
    </ReactAriaModal>
    <div
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    />
    <div
      className="emotion-6"
    >
      <button
        aria-disabled={true}
        aria-label="Zoom Out"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circleMinus.svg"
          width={20}
        />
      </button>
      <button
        aria-label="Zoom In"
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circlePlus.svg"
          width={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render properly 2`] = `
.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-0 {
  padding: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Roboto Condensed;
  font-size: 15px;
  line-height: 19px;
  background-color: #252525;
  color: #808080;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  margin-bottom: 1px;
}

.emotion-3 {
  width: 100%;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px 16px;
  font-weight: 400;
  border-radius: 0;
  position: absolute;
  top: 16px;
  left: 16px;
  padding: 8px;
  color: #808080;
  background-color: #2e2e2e;
  border-radius: 32px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover {
  background-color: #4a4a4a;
}

.emotion-1:hover {
  color: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 32px;
}

.emotion-2 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-2 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-6 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  z-index: 10;
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  opacity: 1;
  padding: 8px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #73b61c;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  opacity: 1;
  padding: 8px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover {
  color: #73b61c;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  >
    574
     Assets
  </div>
  <div
    className="emotion-7"
  >
    <ReactAriaModal
      dialogStyle={
        Object {
          "width": "100%",
        }
      }
      focusDialog={true}
      getApplicationNode={[Function]}
      mounted={false}
      onExit={[Function]}
      titleId="Asset"
      underlayColor="rgba(0, 0, 0, 0.9)"
      verticallyCenter={true}
    >
      <div
        className="emotion-3"
      >
        <button
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            width={20}
          />
        </button>
        <div
          className="emotion-2"
        >
          <AssetAsset
            assetId="pNwnXjVntgbDQgPZhkXqVT-2URMqvJNL"
            projectId="76917058-b147-4556-987a-0a0f11e46d9b"
          />
        </div>
      </div>
    </ReactAriaModal>
    <div
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    />
    <div
      className="emotion-6"
    >
      <button
        aria-label="Zoom Out"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circleMinus.svg"
          width={20}
        />
      </button>
      <button
        aria-disabled={true}
        aria-label="Zoom In"
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circlePlus.svg"
          width={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render properly 3`] = `
.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-0 {
  padding: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Roboto Condensed;
  font-size: 15px;
  line-height: 19px;
  background-color: #252525;
  color: #808080;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  margin-bottom: 1px;
}

.emotion-3 {
  width: 100%;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px 16px;
  font-weight: 400;
  border-radius: 0;
  position: absolute;
  top: 16px;
  left: 16px;
  padding: 8px;
  color: #808080;
  background-color: #2e2e2e;
  border-radius: 32px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover {
  background-color: #4a4a4a;
}

.emotion-1:hover {
  color: #ffffff;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 32px;
}

.emotion-2 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-2 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-6 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  z-index: 10;
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  opacity: 1;
  padding: 8px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover {
  color: #73b61c;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  opacity: 1;
  padding: 8px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #73b61c;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  >
    574
     Assets
  </div>
  <div
    className="emotion-7"
  >
    <ReactAriaModal
      dialogStyle={
        Object {
          "width": "100%",
        }
      }
      focusDialog={true}
      getApplicationNode={[Function]}
      mounted={false}
      onExit={[Function]}
      titleId="Asset"
      underlayColor="rgba(0, 0, 0, 0.9)"
      verticallyCenter={true}
    >
      <div
        className="emotion-3"
      >
        <button
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            width={20}
          />
        </button>
        <div
          className="emotion-2"
        >
          <AssetAsset
            assetId="pNwnXjVntgbDQgPZhkXqVT-2URMqvJNL"
            projectId="76917058-b147-4556-987a-0a0f11e46d9b"
          />
        </div>
      </div>
    </ReactAriaModal>
    <div
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    />
    <div
      className="emotion-6"
    >
      <button
        aria-disabled={true}
        aria-label="Zoom Out"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circleMinus.svg"
          width={20}
        />
      </button>
      <button
        aria-label="Zoom In"
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circlePlus.svg"
          width={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render properly while loading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.emotion-1 {
  min-height: 300px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  background-color: #252525;
  font-size: 15px;
  line-height: 19px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
  margin-right: 16px;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <div
        className="Loading emotion-1"
      >
        <svg
          className="emotion-0"
          data-file-name="generating.svg"
          height={20}
        />
        Loading...
      </div>
    </div>
  </div>
</div>
`;
